--- a/src/package.json
+++ b/src/package.json
@@ -2,5 +2,11 @@
     "main": "main.js",
     "android": {
         "v8Flags": "--expose_gc"
+    },
+    "devDependencies": {
+        "@angular/cli": "^7.1.2"
+    },
+    "dependencies": {
+        "@nativescript/schematics": "^0.4.0"
     }
 }
