--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "nativescript-angular": "~7.0.0",
+    "nativescript-directions": "^1.3.0",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-listview": "^5.0.0",
     "reflect-metadata": "~0.1.8",
