--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "kinvey-nativescript-sdk": "^3.12.3",
     "nativescript-angular": "~7.0.0",
     "nativescript-directions": "^1.3.0",
+    "nativescript-imagepicker": "^6.0.5",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-listview": "^5.0.0",
     "reflect-metadata": "~0.1.8",
@@ -31,11 +33,11 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@nativescript/schematics": "~0.4.0",
-    "nativescript-dev-typescript": "~0.7.0",
-    "nativescript-dev-webpack": "~0.18.0",
     "@angular/compiler-cli": "~7.0.0",
-    "@ngtools/webpack": "~7.0.0"
+    "@nativescript/schematics": "~0.4.0",
+    "@ngtools/webpack": "~7.0.0",
+    "nativescript-dev-typescript": "~0.7.0",
+    "nativescript-dev-webpack": "~0.18.0"
   },
   "readme": "NativeScript Application"
 }
